--- a/ConfigClient/application-dev.properties
+++ b/ConfigClient/application-dev.properties
@@ -1,3 +1,9 @@
-server.port=8762
+server.port=8767
 
-git.server=http://localhost:8761/eureka/syfgitceshi
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+#配置文件所在分支
+spring.cloud.config.label=master
+spring.cloud.config.profile=dev
+#配置服务中心
+spring.cloud.config.uri=http://localhost:8766
