--- a/ConfigClient/application-test.properties
+++ b/ConfigClient/application-test.properties
@@ -1,3 +1,7 @@
-server.port=8762
+server.port=8767
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+spring.cloud.config.label=master
+spring.cloud.config.profile=dev
+spring.cloud.config.uri=http://localhost:8766/
