--- a/ConfigClient/application-dev.properties
+++ b/ConfigClient/application-dev.properties
@@ -1,9 +1,3 @@
 server.port=8767
-
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-
-#配置文件所在分支
-spring.cloud.config.label=master
-spring.cloud.config.profile=dev
-#配置服务中心
-spring.cloud.config.uri=http://localhost:8766
+git.server=caofangzhen lai le
