--- a/ConfigClient2/application-dev.properties
+++ b/ConfigClient2/application-dev.properties
@@ -1,4 +1,4 @@
 spring.application.name=ConfigClient
 server.port=8767
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-git.server=caofangzhen lai le
+git.server=This is Client2 Config
