--- a/ConfigClient2/application-prod.properties
+++ b/ConfigClient2/application-prod.properties
@@ -1,7 +1,3 @@
-server.port=8767
-
+spring.application.name=ConfigClient2
+server.port=8768
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-
-spring.cloud.config.label=master
-spring.cloud.config.profile=dev
-spring.cloud.config.uri=http://localhost:8766/
