--- a/ConfigClient/db-prod.properties
+++ b/ConfigClient/db-prod.properties
@@ -1,5 +1,5 @@
 database.driverclass=com.microsoft.sqlserver.jdbc.SQLServerDriver
-database.jdbcUrl=base jdbc:sqlserver://10.11.12.182:1433;DatabaseName=hg1
+database.jdbcUrl=prod jdbc:sqlserver://10.11.12.182:1433;DatabaseName=hg1
 database.user=sa
 database.password=111111
 
