--- a/ConfigClient/application.properties
+++ b/ConfigClient/application.properties
@@ -5,6 +5,6 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-spring.cloud.bus.enabled=true
-spring.cloud.bus.trace.enabled=true
+spring.cloud.bus.enabled=false
+spring.cloud.bus.trace.enabled=false
 management.endpoints.web.exposure.include=bus-refresh
