--- a/ConfigClientMQ/application-dev.properties
+++ b/ConfigClientMQ/application-dev.properties
@@ -1,2 +1,2 @@
 server.port=8770
-git.server=caofangzhen 哈炎焱 MQ MQ lai le this is client2
+git.server=caofangzhen hayanyan MQ MQ lai le this is client2
