--- a/ConfigClientMQ/application-dev.properties
+++ b/ConfigClientMQ/application-dev.properties
@@ -1,2 +1,2 @@
 server.port=8770
-git.server=caofangzhen hayanyan 1111 MQ MQ lai le this is client2
+git.server=caofangzhen hayanyan re MQ MQ lai le this is client2
